--- a/css/recipes.css
+++ b/css/recipes.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display');
 
+* {
+  box-sizing: border-box;
+  list-style: none;
+}
+
+:focus:not(:focus-visible) {
+  outline: none;
+}
+
 html {
   height: 100%;
   min-width: 280px;
@@ -10,5 +19,164 @@ body {
   padding: 0 1.5rem 1.5rem;
   font: 16px / 1.5 serif;
   background-color: #e3d3b3;
-  color: #490925;
+  color: #480a24;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  height: 3.5rem;
+  padding: 0 1rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 280px;
+  width: 100%;
+  z-index: 1;
+  background-color: #480a24;
+  box-shadow: 0 5px 15px #0000003f;
+}
+
+header :focus {
+  outline: 2px solid #e3d3b3;
+}
+
+header > div {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  width: 800px;
+}
+
+header a {
+  text-decoration: none;
+}
+
+header .logo {
+  padding: 0.2rem 0.5rem;
+  font-family: "Playfair Display", serif;
+  font-size: 1.4rem;
+  font-weight: bold;
+  border-radius: 4px;
+  color: #e3d3b3;
+}
+
+header .logo::before {
+  content: "🥄";
+  margin-right: 0.5rem;
+  vertical-align: 2px;
+}
+
+header .logo:focus {
+  outline-offset: -2px;
+}
+
+nav button {
+  color: #e3d3b3;
+  cursor: pointer;
+}
+
+nav button:focus {
+  outline: 2px solid #e3d3b3;
+}
+
+nav button:hover {
+  background-color: #871243;
+}
+
+nav button:active {
+  background-color: #b41859;
+}
+
+nav .accordion,
+nav .more-recipes-list {
+  transition:
+      max-height 450ms ease-in,
+      visibility 450ms ease-in;
+}
+
+nav .nav-button {
+  padding: 0.5rem;
+  position: relative;
+  border: none;
+  border-radius: 50%;
+  background-color: transparent;
+}
+
+nav .accordion {
+  margin: 0;
+  max-height: 0px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  top: 56px;
+  left: 0;
+  width: 100%;
+  max-width: 440px;
+  visibility: hidden;
+  background-color: #2e0617;
+  box-shadow: 8px 5px 15px #0000003f;
+}
+
+nav .more-recipes-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  width: 100%;
+  font-weight: bold;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #e3d3b363;
+}
+
+nav .more-recipes-button:focus {
+  outline-offset: -8px;
+}
+
+nav .more-recipes-button span {
+  font-size: 1.25rem;
+}
+
+nav .more-recipes-list {
+  margin: 0;
+  max-height: 0;
+  overflow: hidden;
+  padding: 0;
+  visibility: hidden;
+}
+
+nav .accordion a {
+  display: inline-block;
+  padding: 1rem 2rem;
+  width: 100%;
+  color: #e3d3b3;
+}
+
+nav .accordion a:focus {
+  outline-offset: -8px;
+}
+
+nav .accordion a:hover {
+  background-color: #1d4249;
+}
+
+nav .accordion a:active {
+  background-color: #2c626d;
+}
+
+nav .github-link {
+  text-align: center;
+}
+
+/* Interactive class */
+nav .contents-shown {
+  max-height: 300px;
+  visibility: visible;
+}
+
+@media only screen and (min-width: 800px) {
+  nav .accordion {
+    left: initial;
+  }
 }
