Remove style from document

--- a/css/orange-chicken.css
+++ b/css/orange-chicken.css
@@ -6,7 +6,7 @@ How properties are ordered:
   Other
 */
 
-body {
+/* body {
   padding: 10px 0;
   margin: auto;
   width: 50%;
@@ -58,4 +58,4 @@ img {
   margin: auto;
   width: 400px;
   border: 2px solid #3C8A99;
-}
+} */
