--- a/css/recipes.css
+++ b/css/recipes.css
@@ -15,7 +15,8 @@ html {
 }
 
 body {
-  margin-top: 5rem;
+  margin: 5rem auto 0;
+  max-width: 800px;
   padding: 0 1.5rem 1.5rem;
   font: 16px / 1.5 serif;
   background-color: #e3d3b3;
@@ -45,7 +46,7 @@ header > div {
   display: flex;
   align-items: center;
   gap: 0.4rem;
-  width: 800px;
+  width: 752px;
 }
 
 header a {
