--- a/css/recipes.css
+++ b/css/recipes.css
@@ -25,6 +25,8 @@ body {
 
 header {
   display: flex;
+  align-items: center;
+  gap: 0.4rem;
   justify-content: center;
   height: 3.5rem;
   padding: 0 1rem;
@@ -42,10 +44,9 @@ header :focus {
   outline: 2px solid #e3d3b3;
 }
 
-header > div {
+header div {
   display: flex;
-  align-items: center;
-  gap: 0.4rem;
+  gap: 0.5rem;
   width: 752px;
 }
 
