--- a/css/recipes.css
+++ b/css/recipes.css
@@ -172,6 +172,10 @@ nav .contents-shown {
   visibility: visible;
 }
 
+h1 {
+  text-align: center;
+}
+
 @media only screen and (min-width: 800px) {
   nav .accordion {
     left: initial;
