--- a/css/recipes.css
+++ b/css/recipes.css
@@ -2,7 +2,6 @@
 
 * {
   box-sizing: border-box;
-  list-style: none;
 }
 
 :focus:not(:focus-visible) {
@@ -121,6 +120,7 @@ nav .more-recipes-button {
   justify-content: space-between;
   padding: 1rem;
   width: 100%;
+  font-family: 'Playfair Display', serif;
   font-weight: bold;
   background-color: transparent;
   border: none;
@@ -172,9 +172,10 @@ nav .contents-shown {
   visibility: visible;
 }
 
-nav .more-recipes-button,
-h1, h2,
-h3, th {
+h1,
+h2,
+h3,
+th {
   font-family: 'Playfair Display', serif;
 }
 
@@ -241,6 +242,71 @@ h1 {
 
 .recipe-details th {
   text-align: left;
+}
+
+.ingredients-and-steps {
+  display: grid;
+  gap: 0 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+
+.ingredients-and-steps ul,
+.ingredients-and-steps ol {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0;
+}
+
+.ingredients-and-steps ul {
+  margin: 0;
+  list-style: none;
+}
+
+.ingredients-and-steps ul input {
+  position: relative;
+  height: 18px;
+  margin-right: 5px;
+  width: 18px;
+  vertical-align: text-top;
+  background-color:  #480a24;
+  border-radius: 3px;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.ingredients-and-steps ul input:hover {
+  background-color: #5e0d2f;
+}
+
+.ingredients-and-steps ul input:focus {
+  outline: 2px solid #480a24;
+  outline-offset: 2px;
+}
+
+.ingredients-and-steps ul input:active {
+  background-color: #75103a;
+}
+
+.ingredients-and-steps ul input:checked::before {
+  content: '✔';
+  position: absolute;
+  font-size: 1.2rem;
+  color: #80bfcb;
+  transform: translate(1px, -1px);
+}
+
+.ingredients-and-steps ol {
+  margin: 0 0 0 1rem;
+}
+
+.ingredients-and-steps ol li {
+  padding-left: 5px;
+}
+
+.ingredients-and-steps ol li::marker {
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
 }
 
 @media only screen and (min-width: 800px) {
