--- a/css/recipes.css
+++ b/css/recipes.css
@@ -1,186 +1,169 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display');
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
-:focus:not(:focus-visible) {
+*:focus:not(:focus-visible) {
   outline: none;
 }
 
+*:focus {
+  outline: 2px solid;
+}
+
 html {
-  height: 100%;
   min-width: 280px;
 }
 
 body {
-  margin: 5rem auto 0;
-  max-width: 800px;
-  padding: 0 1.5rem 1.5rem;
+  margin: 0;
   font: 16px / 1.5 serif;
   background-color: #e3d3b3;
   color: #480a24;
 }
 
-header {
-  display: flex;
-  align-items: center;
-  gap: 0.4rem;
-  justify-content: center;
-  height: 3.5rem;
-  padding: 0 1.5rem;
-  position: fixed;
-  top: 0;
-  left: 0;
-  min-width: 280px;
-  width: 100%;
-  z-index: 1;
-  background-color: #480a24;
-  box-shadow: 0 5px 15px #0000003f;
-}
-
-header :focus {
-  outline: 2px solid #e3d3b3;
-}
-
-header div {
-  display: flex;
-  gap: 0.5rem;
-  width: 752px;
-}
-
-header a {
-  text-decoration: none;
-}
-
-header .logo {
-  padding: 0.2rem 0.5rem;
-  font-family: "Playfair Display", serif;
-  font-size: 1.4rem;
-  font-weight: bold;
-  color: #e3d3b3;
-}
-
-header .logo::before {
-  content: "🥄";
-  margin-right: 0.5rem;
-  vertical-align: 2px;
-}
-
-header .logo:focus {
-  outline-offset: -2px;
-}
-
-nav button {
-  color: #e3d3b3;
-  cursor: pointer;
-}
-
-nav button:hover {
-  background-color: #871243;
-}
-
-nav button:active {
-  background-color: #b41859;
-}
-
-nav .accordion,
-nav .more-recipes-list {
-  transition:
-      max-height 450ms ease-in,
-      visibility 450ms ease-in;
-}
-
-nav .nav-button {
-  padding: 0.5rem;
-  position: relative;
-  border: none;
-  border-radius: 50%;
-  background-color: transparent;
-}
-
-nav .accordion {
-  margin: 0;
-  max-height: 0px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  top: 56px;
-  left: 0;
-  width: 100%;
-  max-width: 440px;
-  visibility: hidden;
-  background-color: #2e0617;
-  box-shadow: 8px 5px 15px #0000003f;
-}
-
-nav .more-recipes-button {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
-  width: 100%;
-  font-family: 'Playfair Display', serif;
-  font-weight: bold;
-  background-color: transparent;
-  border: none;
-  border-bottom: 1px solid #e3d3b363;
-}
-
-nav .more-recipes-button:focus {
-  outline-offset: -8px;
-}
-
-nav .more-recipes-button span {
-  font-size: 1.25rem;
-}
-
-nav .more-recipes-list {
-  margin: 0;
-  max-height: 0;
-  overflow: hidden;
-  padding: 0;
-  visibility: hidden;
-}
-
-nav .accordion a {
-  display: inline-block;
-  padding: 1rem 2rem;
-  width: 100%;
-  color: #e3d3b3;
-}
-
-nav .accordion a:focus {
-  outline-offset: -8px;
-}
-
-nav .accordion a:hover {
-  background-color: #1d4249;
-}
-
-nav .accordion a:active {
-  background-color: #2c626d;
-}
-
-nav .github-link {
-  text-align: center;
-}
-
-/* Interactive class */
-nav .contents-shown {
-  max-height: 300px;
-  visibility: visible;
-}
-
+header .logo,
+nav a,
 h1,
 h2,
 h3,
-th {
+th,
+.ingredients-and-steps ol li::marker {
   font-family: 'Playfair Display', serif;
+}
+
+header .logo,
+nav a span,
+.ingredients-and-steps ol li::marker {
+  font-weight: bold;
+}
+
+h2,
+p {
+  margin: 0;
 }
 
 h1 {
   text-align: center;
+}
+
+p {
+  font-style: italic;
+}
+
+a {
+  color: #480a24;
+}
+
+header,
+nav {
+  transition: transform 400ms ease-in-out;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3rem;
+  padding: 0 1.5rem;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background-color: #480a24;
+  box-shadow: 0 5px 10px #00000036;
+}
+
+header .logo {
+  padding: 0.2rem 0.5rem;
+  font-size: 1.4rem;
+  text-decoration: none;
+  color: #e3d3b3;
+}
+
+header .logo:focus {
+  outline-color: #e3d3b3;
+  outline-offset: -2px;
+}
+
+nav {
+  position: sticky;
+  top: 48px;
+  z-index: 1;
+}
+
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 0;
+  max-width: 800px;
+  list-style: none;
+  box-shadow: 0 5px 10px #00000026;
+}
+
+nav li {
+  flex: 1;
+}
+
+nav a {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: #80bfcb;
+  border: 1px solid #1d424936;
+}
+
+nav a:focus {
+  outline-color: #480a24;
+  outline-offset: -6px;
+}
+
+nav a:hover {
+  background-color: #1d4249;
+  color: #e3d3b3;
+}
+
+nav a:active {
+  background-color: #2c626d;
+  color: #e3d3b3;
+}
+
+nav li:first-child a {
+  justify-content: flex-start;
+}
+
+nav li:last-child a {
+  justify-content: flex-end;
+}
+
+nav a span {
+  transform: scale(1.25);
+}
+
+/* Interactive classes for header and nav */
+.show-content {
+  transform: translateY(0);
+}
+
+.hide-content {
+  transform: translateY(-95px);
+}
+
+main {
+  margin: 0 auto;
+  padding: 0 1.5rem;
+  max-width: 800px;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  transition:
+      border-left-color 150ms linear,
+      border-right-color 150ms linear;
 }
 
 .description {
@@ -191,7 +174,6 @@ h1 {
 }
 
 .description img {
-  display: block;
   height: 350px;
   width: 100%;
   max-width: 350px;
@@ -199,14 +181,8 @@ h1 {
   object-fit: cover;
 }
 
-.description h2,
-.description p {
-  margin: 0;
-}
-
 .description p {
   max-width: 60ch;
-  font-style: italic;
 }
 
 .recipe-details {
@@ -275,25 +251,26 @@ h1 {
   appearance: none;
 }
 
+.ingredients-and-steps ul input:checked::before {
+  content: '✔';
+  position: absolute;
+  font-family: sans-serif;
+  color: #80bfcb;
+  transform: translate(3px, 1px);
+  -moz-transform: translate(2px, 0px);
+}
+
 .ingredients-and-steps ul input:hover {
   background-color: #5e0d2f;
 }
 
 .ingredients-and-steps ul input:focus {
-  outline: 2px solid #480a24;
+  outline-color: #480a24;
   outline-offset: 2px;
 }
 
 .ingredients-and-steps ul input:active {
   background-color: #75103a;
-}
-
-.ingredients-and-steps ul input:checked::before {
-  content: '✔';
-  position: absolute;
-  font-size: 1.2rem;
-  color: #80bfcb;
-  transform: translate(1px, -1px);
 }
 
 .ingredients-and-steps ol {
@@ -304,26 +281,14 @@ h1 {
   padding-left: 5px;
 }
 
-.ingredients-and-steps ol li::marker {
-  font-family: 'Playfair Display', serif;
-  font-weight: bold;
-}
-
 footer {
-  margin-top: 1rem;
-}
-
-footer p {
-  margin: 0;
-  font-style: italic;
-}
-
-footer a {
-  color: #480a24;
+  margin: 0 auto;
+  padding: 1rem 1.5rem;
+  max-width: 800px;
 }
 
 footer a:focus {
-  outline: 2px solid #480a24;
+  outline-color: #480a24;
 }
 
 footer a:hover {
@@ -337,8 +302,15 @@ footer a:active {
   color: #e3d3b3;
 }
 
+@media only screen and (max-width: 315px) {
+  .hide-content {
+    transform: translateY(-133px);
+  }
+}
+
 @media only screen and (min-width: 800px) {
-  nav .accordion {
-    left: initial;
+  main {
+    border-left: 1px solid #480a2463;
+    border-right: 1px solid #480a2463;
   }
 }
