Change image outline color

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -177,7 +177,7 @@ main {
   height: 350px;
   width: 100%;
   max-width: 350px;
-  outline: 4px solid #480a24;
+  outline: 4px solid #1d4249;
   object-fit: cover;
 }
 
