--- a/css/recipes.css
+++ b/css/recipes.css
@@ -55,7 +55,10 @@ p {
 
 header,
 nav {
-  transition: transform 400ms ease-in-out;
+  transition:
+    top
+    375ms
+    cubic-bezier(0.45, 0.05, 0.55, 0.95);
 }
 
 header {
@@ -65,29 +68,31 @@ header {
   height: 3rem;
   padding: 0 1.5rem;
   position: sticky;
-  top: 0;
+  top: -48px;
   left: 0;
   z-index: 2;
   background-color: #480a24;
-  box-shadow: 0 5px 10px #00000036;
+  box-shadow: 0 5px 10px #00000026;
   color: #dbf3f3;
 }
 
 header .logo {
   display: flex;
+  align-items: center;
   gap: 0.4rem;
-  padding: 0.2rem 0.5rem;
-  font-size: 1.4rem;
+  padding: 0 0.8rem;
+  font-size: 1.6rem;
   text-decoration: none;
+  white-space: nowrap;
   color: inherit;
 }
 
 header .logo:focus {
   outline-color: #dbf3f3;
-  outline-offset: -2px;
+  outline-offset: -4px;
 }
 
-header img {
+header .logo img {
   transition:
       transform
       200ms
@@ -100,7 +105,7 @@ header .logo:hover img {
 
 nav {
   position: sticky;
-  top: 48px;
+  top: -96px;
   z-index: 1;
   color: #480a24;
 }
@@ -156,12 +161,12 @@ nav a span {
 }
 
 /* Interactive classes for header and nav */
-.show-content {
-  transform: translateY(0);
+.show-header {
+  top: 0;
 }
 
-.hide-content {
-  transform: translateY(-95px);
+.show-nav {
+  top: 48px;
 }
 
 main {
@@ -315,12 +320,6 @@ footer a:hover {
 footer a:active {
   background-color: #2c626d;
   color: #e3d3b3;
-}
-
-@media only screen and (max-width: 315px) {
-  .hide-content {
-    transform: translateY(-133px);
-  }
 }
 
 @media only screen and (min-width: 800px) {
