--- a/css/recipes.css
+++ b/css/recipes.css
@@ -91,7 +91,7 @@ header a {
   font-weight: bold;
   text-decoration: none;
   white-space: nowrap;
-  background-color: #ffffffb6;
+  background-color: #ffffffe6;
   color: #9f591a;
 }
 
@@ -133,7 +133,7 @@ nav a {
   font-family: 'Playfair Display', serif;
   text-decoration: none;
   white-space: nowrap;
-  background-color: #774213;
+  background-color: #9f591a;
   border: 1px solid #2c180736;
   color: #ffffff;
 }
@@ -178,7 +178,7 @@ main {
   max-width: 800px;
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
-  color: #42240b;
+  color: #141414;
   transition:
       border-left-color 150ms linear,
       border-right-color 150ms linear;
@@ -210,7 +210,7 @@ main h1 {
 .description img {
   width: 100%;
   max-width: 350px;
-  outline: 4px solid #42240b;
+  outline: 4px solid #141414;
   object-fit: cover;
 }
 
@@ -280,7 +280,7 @@ main h1 {
   margin-right: 5px;
   width: 18px;
   vertical-align: text-top;
-  background-color:  #42240b;
+  background-color:  #141414;
   border-radius: 3px;
   -webkit-appearance: none;
   appearance: none;
@@ -296,7 +296,7 @@ main h1 {
 }
 
 .ingredients-and-steps ul input:focus {
-  outline-color: #42240b;
+  outline-color: #141414;
   outline-offset: 2px;
 }
 
@@ -332,7 +332,7 @@ footer {
 
 footer p,
 .recipe-credit {
-  color: #42240b;
+  color: #141414;
 }
 
 footer p {
@@ -341,7 +341,7 @@ footer p {
 }
 
 footer a:focus {
-  outline-color: #42240b;
+  outline-color: #141414;
 }
 
 .recipe-credit:hover {
