--- a/css/home.css
+++ b/css/home.css
@@ -19,6 +19,10 @@ h2 {
 footer {
   justify-content: center;
   width: 100%;
+  background:
+      url('../img/hat-and-spoon.png')
+      50% calc(100% + 4rem) / 140px 120px
+      no-repeat;
 }
 
 footer div {
