--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -40,7 +40,7 @@ header {
       cubic-bezier(0.45, 0.05, 0.55, 0.95);
 }
 
-header h1 {
+header div {
   display: flex;
   align-items: center;
   height: 100%;
@@ -50,6 +50,7 @@ header h1 {
 
 header a {
   padding: 0 0.8rem;
+  font-family: 'Playfair Display', serif;
   font-size: 1.3rem;
   font-weight: bold;
   text-decoration: none;
