Change footer style

--- a/css/home.css
+++ b/css/home.css
@@ -96,11 +96,8 @@ p {
 
 footer {
   justify-content: center;
+  margin-top: 1.5rem;
   width: 100%;
-  background:
-      url('../img/hat-and-spoon.png')
-      50% calc(100% + 4rem) / 140px 120px
-      no-repeat;
 }
 
 footer div {
