--- a/css/home.css
+++ b/css/home.css
@@ -11,6 +11,7 @@ body {
 header {
   flex: none;
   height: max-content;
+  color: #141414;
 }
 
 header .hero {
@@ -30,6 +31,10 @@ header .hero-text {
   justify-content: center;
 }
 
+header .hero-text h1 span {
+  color: #9f591a;
+}
+
 header .hero-image {
   position: relative;
 }
@@ -40,7 +45,7 @@ header .hero-image::after {
   font-family: 'Playfair Display', serif;
   padding: 0.25rem 1rem;
   font-weight: bold;
-  border-radius: 20px;
+  border-radius: 3px;
   box-shadow: 0 5px 10px #00000036;
   color: #000;
   outline: 2px solid #000000;
@@ -93,6 +98,7 @@ main {
 
 h1 {
   margin: 0;
+  font-size: 3rem;
 }
 
 p {
