--- a/css/home.css
+++ b/css/home.css
@@ -31,6 +31,12 @@ header .hero-text {
   justify-content: center;
 }
 
+.hero-text h1 {
+  margin: 0;
+  font-size: 3rem;
+  line-height: 1.3;
+}
+
 header .hero-text h1 span {
   color: #9f591a;
 }
@@ -90,11 +96,6 @@ header img {
 
 main {
   flex: 1;
-}
-
-h1 {
-  margin: 0;
-  font-size: 3rem;
 }
 
 .recipes {
