--- a/css/home.css
+++ b/css/home.css
@@ -14,7 +14,7 @@ header {
   color: #141414;
 }
 
-header .hero {
+.hero {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -24,7 +24,7 @@ header .hero {
   max-width: 800px;
 }
 
-header .hero-text {
+.hero-text {
   display: flex;
   flex: 1 1 200px;
   flex-direction: column;
@@ -37,16 +37,16 @@ header .hero-text {
   line-height: 1.3;
 }
 
-header .hero-text h1 span {
+.hero-text h1 span {
   color: #9f591a;
 }
 
-header .hero-image {
+.hero-image {
   position: relative;
 }
 
-header .hero-image::before,
-header .hero-image::after {
+.hero-image::before,
+.hero-image::after {
   position: absolute;
   font-family: 'Playfair Display', serif;
   padding: 0.25rem 1rem;
@@ -62,7 +62,7 @@ header .hero-image::after {
       alternate;
 }
 
-header .hero-image::before {
+.hero-image::before {
   content: 'simple';
   left: 0px;
   top: -8px;
@@ -70,7 +70,7 @@ header .hero-image::before {
   animation-name: float-up;
 }
 
-header .hero-image::after {
+.hero-image::after {
   content: 'delicious';
   right: 10px;
   bottom: 15px;
@@ -78,12 +78,12 @@ header .hero-image::after {
   animation-name: float-down;
 }
 
-header .hero-image:hover::before,
-header .hero-image:hover::after {
+.hero-image:hover::before,
+.hero-image:hover::after {
   animation-play-state: paused;
 }
 
-header img {
+.hero-image img {
   height: auto;
   width: 100%;
   max-width: 250px;
