--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -7,11 +7,13 @@
   box-sizing: border-box;
 }
 
-*:focus:not(:focus-visible) {
+*:focus:not(:focus-visible),
+[type="button"]:focus:not(:focus-visible) {
   outline: none;
 }
 
-*:focus {
+*:focus,
+[type="button"]:focus {
   outline: 2px solid;
 }
 
@@ -128,6 +130,7 @@ footer {
 }
 
 .github-link:focus {
+  outline-color: #141414;
   outline-offset: 4px;
 }
 
