--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -23,6 +23,7 @@ html {
 }
 
 body {
+  min-height: 100%;
   margin: 0;
   font: 16px / 1.5 serif;
 }
@@ -79,7 +80,6 @@ body {
   margin: 0 auto;
   max-width: 800px;
 }
-
 
 .header-logo a {
   padding: 0 0.8rem;
