Fix skip link's text color

--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -37,7 +37,7 @@ body {
   background-color: #eddaca;
   border-radius: 3px;
   box-shadow: 0 5px 15px #00000036;
-  color: #42240b;
+  color: #141414;
   outline-offset: 0;
   transition: top 300ms ease-in-out;
 }
