--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -62,7 +62,7 @@ body {
   position: sticky;
   top: -52px;
   left: 0;
-  background-color: #ffffff;
+  background-color: #fff;
   box-shadow: 0 5px 10px #00000026;
   transition:
       top
@@ -84,7 +84,6 @@ body {
   font-size: 1.3rem;
   font-weight: bold;
   text-decoration: none;
-  white-space: nowrap;
   color: #9f591a;
 }
 
@@ -93,7 +92,11 @@ body {
   outline-offset: -2px;
 } 
 
-/* Interactive class for nav */
+/* Interactive class for header and nav */
+.show-header {
+  top: 0;
+}
+
 .show-nav {
   top: 48px;
 }
@@ -114,13 +117,21 @@ p {
 
 footer {
   display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+footer div {
+  display: flex;
   align-items: center;
   padding: 1rem 1.5rem;
+  width: 800px;
 }
 
 .github-link {
   display: inline-block;
   height: 32px;
+  text-decoration: none;
   border-radius: 50%;
   transition: transform 150ms ease-out;
 }
