--- a/css/home.css
+++ b/css/home.css
@@ -54,10 +54,10 @@ header {
   font-family: 'Playfair Display', serif;
   padding: 0.25rem 1rem;
   font-weight: bold;
-  border-radius: 3px;
   box-shadow: 0 5px 10px #00000036;
   color: #141414;
-  outline: 2px solid #141414;
+  border: 2px solid #141414;
+  border-radius: 3px;
   animation:
       1200ms
       ease-in-out
@@ -128,8 +128,8 @@ h3,
   padding: 1rem;
   flex: 1 1 240px;
   background-color: #eddaca;
+  border: 1px solid #42240b63;
   border-radius: 3px;
-  outline: 1px solid #42240b63;
 }
 
 .recipes img {
