--- a/css/recipes.css
+++ b/css/recipes.css
@@ -115,8 +115,8 @@ main article {
 .description img {
   width: 100%;
   max-width: 350px;
-  border-radius: 3px;
-  outline: 4px solid #141414;
+  border-radius: 6px;
+  border: 4px solid #141414;
   object-fit: cover;
 }
 
