Change checkboxes' border width

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -194,7 +194,7 @@ main article {
   width: 20px;
   vertical-align: -4px;
   background: #141414;
-  border: 2px solid #14141486;
+  border: 1px solid #141414;
   border-radius: 3px;
   -webkit-appearance: none;
   appearance: none;
