--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -28,6 +28,26 @@ body {
   font: 16px / 1.5 serif;
 }
 
+body::-webkit-scrollbar {
+  width: 1rem;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #eee;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #5b6260;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #49504e;
+}
+
+body::-webkit-scrollbar-thumb:active {
+  background-color: #383d3c;
+}
+
 .skip-link {
   display: inline-block;
   padding: 0.3rem 1rem;
