--- a/css/home.css
+++ b/css/home.css
@@ -146,7 +146,10 @@ h3,
 }
 
 .recipes a {
+  display: flex;
+  align-items: center;
   margin-top: auto;
+  text-decoration: none;
   color: #141414;
 }
 
@@ -163,6 +166,10 @@ h3,
 .recipes a:active {
   background-color: #ddbbc7;
   color: #42240b;
+}
+
+.recipes a span {
+  transform: scale(0.9);
 }
 
 aside {
