--- a/css/home.css
+++ b/css/home.css
@@ -27,29 +27,29 @@ header {
   max-width: 800px;
 }
 
-.hero-text {
+.hero div:first-child {
   display: flex;
   flex: 1 1 200px;
   flex-direction: column;
   justify-content: center;
 }
 
-.hero-text h1 {
+.hero div:first-child h1 {
   margin: 0;
   font-size: 3rem;
   line-height: 1.3;
 }
 
-.hero-text h1 span {
+.hero div:first-child h1 span {
   color: #9f591a;
 }
 
-.hero-image {
+.hero div:last-child {
   position: relative;
 }
 
-.hero-image::before,
-.hero-image::after {
+.hero div:last-child::before,
+.hero div:last-child::after {
   position: absolute;
   font-family: 'Playfair Display', serif;
   padding: 0.25rem 1rem;
@@ -65,7 +65,7 @@ header {
       alternate;
 }
 
-.hero-image::before {
+.hero div:last-child::before {
   content: 'simple';
   left: 0px;
   top: -8px;
@@ -73,7 +73,7 @@ header {
   animation-name: float-up;
 }
 
-.hero-image::after {
+.hero div:last-child::after {
   content: 'delicious';
   right: 10px;
   bottom: 15px;
@@ -81,7 +81,7 @@ header {
   animation-name: float-down;
 }
 
-.hero-image img {
+.hero div:last-child img {
   height: auto;
   width: 100%;
   max-width: 250px;
@@ -98,15 +98,15 @@ main {
 
 h2,
 h3,
-.recipes p {
+section p {
   margin: 0;
 }
 
-.recipes {
+section {
   margin: 0 1.5rem;
 }
 
-.recipes div {
+section div {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem 1.5rem;
@@ -116,7 +116,7 @@ h3,
   border-top: 1px solid #42240b63;
 }
 
-.recipes article {
+section article {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
@@ -128,7 +128,7 @@ h3,
   border-radius: 6px;
 }
 
-.recipes img {
+section img {
   height: 220px;
   width: 100%;
   border: 4px solid #141414;
@@ -136,40 +136,38 @@ h3,
   object-fit: cover;
 }
 
-.recipes h2,
-.recipes p {
+section h2,
+section p {
   width: 100%;
 }
 
-.recipes p {
+section p {
   font-style: italic;
 }
 
-.recipes a {
-  display: flex;
-  align-items: center;
+section a {
   margin-top: auto;
   text-decoration: none;
   color: #141414;
 }
 
-.recipes a:focus {
+section a:focus {
   outline-color: #141414;
 }
 
-.recipes a:hover {
+section a:hover {
   text-decoration: none;
   background-color: #d6abba;
   color: #42240b;
 }
 
-.recipes a:active {
+section a:active {
   background-color: #ddbbc7;
   color: #42240b;
 }
 
-.recipes a span {
-  transform: scale(0.9);
+section a span {
+  vertical-align: -7px;
 }
 
 aside {
