--- a/css/recipes.css
+++ b/css/recipes.css
@@ -189,55 +189,24 @@ main article {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 0;
 }
 
 .ingredients-and-steps ul {
   margin: 0;
-  list-style: none;
+  padding: 0 0 0 0.8rem;
 }
 
-.ingredients-and-steps ul input {
-  height: 18px;
-  margin-right: 5px;
-  width: 18px;
-  vertical-align: text-top;
-  background: #141414;
-  border-radius: 3px;
-  -webkit-appearance: none;
-  appearance: none;
+.ingredients-and-steps ul li {
+  padding-left: 8px;
 }
 
-.ingredients-and-steps ul input:checked {
-  background:
-      url('../img/check-mark.png'),
-      #141414;
-  background-position:
-      50% 50%,
-      top left;
-  background-size:
-      10px 10px,
-      contain;
-  background-repeat:
-      no-repeat,
-      no-repeat;
-}
-
-.ingredients-and-steps ul input:focus {
-  outline-color: #141414;
-  outline-offset: 2px;
-}
-
-.ingredients-and-steps ul input:hover {
-  background-color: #552a39;
-}
-
-.ingredients-and-steps ul input:active {
-  background-color: #783b50;
+.ingredients-and-steps ul li::marker {
+  content: "✥";
 }
 
 .ingredients-and-steps ol {
   margin: 0 0 0 1rem;
+  padding: 0;
 }
 
 .ingredients-and-steps ol li {
@@ -247,7 +216,7 @@ main article {
 .ingredients-and-steps ol li::marker {
   font-family: 'Playfair Display', serif;
   font-weight: bold;
-}
+} 
 
 footer div {
   justify-content: space-between;
