--- a/css/recipes.css
+++ b/css/recipes.css
@@ -191,6 +191,11 @@ main article {
   gap: 1rem;
 }
 
+.ingredients-and-steps li::marker {
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+}
+
 .ingredients-and-steps ul {
   margin: 0;
   padding: 0 0 0 0.8rem;
@@ -212,11 +217,6 @@ main article {
 .ingredients-and-steps ol li {
   padding-left: 5px;
 }
-
-.ingredients-and-steps ol li::marker {
-  font-family: 'Playfair Display', serif;
-  font-weight: bold;
-} 
 
 footer div {
   justify-content: space-between;
