--- a/css/recipes.css
+++ b/css/recipes.css
@@ -191,21 +191,20 @@ main article {
   gap: 1rem;
 }
 
-.ingredients-and-steps li::marker {
+.ingredients-and-steps ul li::before,
+.ingredients-and-steps ol li::marker {
   font-weight: bold;
 }
 
 .ingredients-and-steps ul {
   margin: 0;
-  padding: 0 0 0 0.8rem;
+  padding: 0;
+  list-style: none;
 }
 
-.ingredients-and-steps ul li {
-  padding-left: 8px;
-}
-
-.ingredients-and-steps ul li::marker {
+.ingredients-and-steps ul li::before {
   content: "✥";
+  margin-right: 8px;
 }
 
 .ingredients-and-steps ol {
@@ -215,7 +214,11 @@ main article {
 
 .ingredients-and-steps ol li {
   padding-left: 5px;
-  font-family: 'Playfair Display', serif;
+}
+
+.ingredients-and-steps ol li::marker {
+  font-family: "Playfair Display", serif;
+  font-weight: bold;
 }
 
 footer div {
