--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -23,6 +23,8 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   min-height: 100%;
   font: 16px / 1.5 serif;
 }
@@ -109,7 +111,7 @@ body::-webkit-scrollbar-thumb:active {
 .header-logo a:focus {
   outline-color: #9f591a;
   outline-offset: -2px;
-} 
+}
 
 /* Interactive class for header and nav */
 .show-header {
@@ -121,6 +123,7 @@ body::-webkit-scrollbar-thumb:active {
 }
 
 main {
+  flex: 1;
   color: #141414;
 }
 
